Fix nav contrast, reduce image quality for better compression

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -81,7 +81,7 @@
 
 .header-nav .nav-link.active {
   background: #ffebef;
-  color: #FF3366;
+  color: #C41E3A;
 }
 
 .header-nav .nav-link svg {
